Improve autocomplete in bash
 - Includes an expect script for testing autocomplete
   behavior in zsh and bash
 - In bash, installs bash-completion, so you'll need
   that if you're using bash.
 - Version pinning boto3 and its companion jmsepath,
   due to what seems to be a strange bug.
 - Refuse to install wheels as well, since they seem
   to exacerbate the problem.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,15 @@ python:
   - "3.5"
   - "nightly"
 
-script: coverage run --source ish -m unittest discover && coverage report -m --fail-under=100
+addons:
+  apt:
+    packages:
+      - expect
+      - zsh
+
+install: pip install -r requirements.txt --no-use-wheel
+
+script:
+  - coverage run --source ish -m unittest discover
+  - coverage report -m --fail-under=100
+  - ./test.expect
